--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.9.0",
     "next": "13.1.6",
+    "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
