--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@prisma/client": "^4.9.0",
     "next": "13.1.6",
     "prisma": "^4.9.0",
